<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tsumugiya</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_tab" translatable="false">TabActivity</string>
    <string name="tab_text_1" translatable="false">店舗一覧</string>
    <string name="tab_text_2" translatable="false">地図から探す</string>
    <string name="title_activity_bottom_navigation" translatable="false">BottomNavigationActivity</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="hello_home_second" translatable="false">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_dashboard_second" translatable="false">Hello DashboardSecondFragment. Arg: %1$s</string>
    <string name="hello_notifications_second" translatable="false">Hello NotificationsSecondFragment. Arg: %1$s</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="facebook_app_id" translatable="false">270652877382683</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb270652877382683</string>

    <string name="home_second" translatable="false">Home Second</string>
    <string name="title_activity_store_tab_list" translatable="false">StoreTabListActivity</string>
    <string name="title_activity_store_map_view" translatable="false">Map</string>
    <string name="navigation_title_menu" translatable="false">Menu</string>
    <string name="navigation_title_instagram" translatable="false">Instagram</string>

    <string name="instagram_domain" translatable="false">instagram.com</string>
    <string name="instagram_url" translatable="false">https://www.instagram.com/explore/tags/ramensekai</string>

    <string name="homescreen_weblink" translatable="false">https://transit-emenu.com/</string>
    <!--    welcome guest, current point-->
    <string name="homescreen_point_section_welcome" translatable="false">ようこそ  ゲスト  さま \n現在のポイント
</string>
    <string name="homescreen_point_section_welcome_loggedin" translatable="false">ようこそ  %s  さま \n現在のポイント
</string>
    <string name="homescreen_point_section_subtitle" translatable="false">現在のポイント</string>
    <string name="homescreen_point_up_to_next_rank" translatable="false">次のランクまで %dpt</string>
    <string name="homescreen_notice_title" translatable="false">クーポン</string>
    <!--    Use coupons Get points for discount coupons! \ N-->
    <!--    The bonito bowl of bonito is even more delicious-->
<!--    \nかつ庵のかつ丼をさらに美味く-->
    <string name="homescreen_notice_subtitle" translatable="false">お得なクーポンをポイントを使ってGET!</string>
    <!--    use coupon-->
    <string name="homescreen_notice_button_title" translatable="false">クーポンを使う</string>

    <!--    kuwashiku/in detail-->
    <string name="homescreen_information_title" translatable="false">インフォメーション</string>
    <string name="homescreen_information_subtitle1" translatable="false">期間限定・おすすめ</string>
    <string name="homescreen_information_subtitle2" translatable="false">「うま辛極担々麺」 4月25日土から</string>
    <string name="homescreen_information_button_title" translatable="false">詳しく</string>
    <string name="homescreen_point_history_title" translatable="false">ポイント履歴</string>
<!--    あなたのトランザクションのリアルタイム追跡。-->
    <string name="homescreen_point_history_subtitle" translatable="false">Real time tracking of your transaction.</string>

    <string name="preference_UUID_key" translatable="false">Preference_UUID</string>
    <string name="preference_UUID_key_google" translatable="false">Preference_UUID_google</string>
    <string name="preference_UUID_key_facebook" translatable="false">Preference_UUID_facebook</string>
    <string name="preference_UUID_key_email" translatable="false">Preference_UUID_email</string>
    <string name="preference_current_points_key" translatable="false">Preference_Current_Points</string>
    <string name="preference_total_points_key" translatable="false">Preference_Points</string>
    <string name="text_label_point" translatable="false">%s ポイント</string>

    <string name="header_welcome" translatable="false">ようこそ, %s</string>
    <string name="header_title_morning" translatable="false">Good Morning</string>
    <string name="header_title_afternoon" translatable="false">Good Afternoon</string>
    <string name="header_title_night" translatable="false">Have a great Night!</string>
    <string name="header_title_morning_loggedin" translatable="false">Good Morning! %s</string>
    <string name="header_title_afternoon_loggedin" translatable="false">Have a great Noon! %s</string>
    <string name="header_title_night_loggedin" translatable="false">Have a great Night! %s</string>
    <string name="header_image_url" translatable="false" tools:ignore="TypographyDashes">https://firebasestorage.googleapis.com/v0/b/tsumugiya-886e1.appspot.com/o/store%2Fpage_bg_typ11.jpg?alt=media&amp;token=a2c057ec-667c-4bce-99cb-e5c95ddeb6cc</string>
    <string name="home_link_notice" translatable="false" tools:ignore="TypographyDashes">https://transit-emenu.com/</string>

    <string name="tab_home">Home</string>
    <string name="tab_point">Points</string>
    <string name="tab_store">Store</string>
    <string name="tab_menu">Menu</string>
    <string name="tab_insta">Instagram</string>

    <string name="coupon" translatable="false">クーポン</string>
    <string name="qr_code_title" translatable="false">表示されているQRコードを\nスタッフへご提示ください。</string>
    <string name="qr_code_subtitle" translatable="false">※クーポボンのご利用は、お一人様1日一回限りです。\n※他のサービスとの併用はできません。</string>
    <string name="map_pin" translatable="false">⯆</string>

    <string name="last_points_acquired" translatable="false">最後に獲得したポイント</string>
    <string name="today_earned_points" translatable="false">今日の獲得ポイント</string>
    <string name="collect_points" translatable="false">ポイントを貯める</string>

    <string name="location">[Location]</string>
    <string name="contact">[Contact]</string>
    <string name="store_hours">[Store Hours]</string>
    <string name="placeholder" translatable="false">[Placeholder]</string>
    <string name="access_button">Access</string>
    <string name="capacity">[Capacity]</string>
    <string name="private_parking">[Private Parking]</string>
    <string name="use_coupon">クーポンを使う</string>
    <string name="regular_holiday">[定休日]</string>
    <string name="credit_card">[クレジットカード]</string>
    <string name="smart_payment">[スマホ決済]</string>
    <string name="branch_details_directions">[アクセス]</string>

    <string name="dash_store_hours" translatable="false">%1$s - %2$s</string>
    <string name="tax_included" translatable="false">※価格は全て税込みです。</string>
    <string name="go_to_store" translatable="false">この商品の店舗へ</string>

    <string name="settings_title" translatable="false">設定</string>
    <string name="settings_notification" translatable="false">通知</string>
    <string name="settings_privacy_policy" translatable="false">プライバシーポリシー</string>
    <string name="settings_opinion" translatable="false">ご意見・ご感想</string>
    <string name="settings_notice" translatable="false">お知らせ</string>
    <string name="settings_media_information" translatable="false">メディア掲載情報</string>
    <string name="settings_copyright" translatable="false">© 株式会社 翔志.All Rights Reserved</string>
    <string name="settings_sign_in" translatable="false">サインイン</string>

    <string name="options_login" translatable="false">ログイン</string>
    <string name="options_signup" translatable="false">登録</string>
    <string name="options_later" translatable="false">あとで</string>

    <string name="user_name" translatable="false">お名前</string>
    <string name="user_email" translatable="false">メールアドレス</string>
    <string name="user_password" translatable="false">パスワード</string>
    <string name="user_forgot_password" translatable="false">パスワードを忘れた方</string>
    <string name="label_or" translatable="false">または</string>
    <string name="app_logo">App Logo Banner</string>
    <string name="qr_code_corners" translatable="false">Qr Code Corners</string>
    <string name="yen" translatable="false">¥%s</string>

    <string name="scan_qr_code" translatable="false">QRコードをスキャンしてください。</string>
    <string name="invalid_login" translatable="false">ユーザー名またはパスワードが正しくあり</string>

    <string name="redeem_coupons_customer" translatable="false">顧客ポイントを引き換える</string>
    <string name="redeem" translatable="false">引き換える</string>
    <string name="redeem_successful" translatable="false">メッセージ 引き換えに成功しました</string>
    <string name="confirm_submit_details" translatable="false">よろしいでしょうか?</string>
    <string name="yes" translatable="false">はい</string>
    <string name="cancel" translatable="false">キャンセル</string>
    <string name="insufficient_points" translatable="false">カスタマーポイントが足りない</string>


    <string name="transfer_customer_points" translatable="false">得意先ポイントの転送</string>
    <string name="transfer_successful" translatable="false">正常に転送されました %s</string>
    <string name="transfer" translatable="false">転送</string>
    <string name="invalid" translatable="false">無効</string>
    <string name="earn_points_successful" translatable="false">ポイントを獲得しました。%s</string>
    <string name="no_coupon_available" translatable="false">クーポは利用できません</string>

    <string name="send" translatable="false">送信</string>
    <string name="check_email" translatable="false">メールアドレスを確認してください。</string>
    <string name="return_to_login" translatable="false">ログイン画面に戻る</string>

    <string name="notification_transfer_title" translatable="false">獲得しました</string>
    <string name="notification_transfer_body" translatable="false">%d pts を %s から獲得しました。</string>
    <string name="notification_redeem_title" translatable="false">引き換えました</string>
    <string name="notification_redeem_body" translatable="false">%d pts を %s から引き換えました.</string>
    {

</resources>