<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/tab_home"
        android:title="@string/tab_home" />

    <item
        android:id="@+id/navigation_customer_qr"
        android:icon="@drawable/tab_qrcode"
        android:title="@string/tab_point"
        app:showAsAction="withText" />

    <item
        android:id="@+id/navigation_store_tabs"
        android:icon="@drawable/tab_store"
        android:title="@string/tab_store" />
    <item
        android:id="@+id/navigation_menu_category"
        android:icon="@drawable/tab_ramen"
        android:title="@string/tab_menu"
        app:showAsAction="withText" />
    <item
        android:id="@+id/navigation_instagram"
        android:icon="@drawable/tab_insta"
        android:title="@string/tab_insta"
        tools:ignore="DuplicateIds" />
</menu>
