<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ortech.shopapp.HomeScreen"
        android:label="@string/title_home"
        tools:layout="@layout/activity_home_screen" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ortech.shopapp.ui.home.HomeFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ortech.shopapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_store_list"
        android:name="com.ortech.shopapp.StoreListFragment"
        android:label="list" />
    <activity
        android:id="@+id/navigation_customer_qr"
        android:name="com.ortech.shopapp.CustomerQRCodeActivity"
        android:label="activity_customer_qr_code"
        tools:layout="@layout/activity_customer_qr_code" />
    <activity
        android:id="@+id/navigation_store_tabs"
        android:name="com.ortech.shopapp.StoreTabListActivity"
        android:label="activity_store_tab_list"
        tools:layout="@layout/activity_store_tab_list" />
    <fragment
        android:id="@+id/navigation_menu_category"
        android:name="com.ortech.shopapp.MenuFragment"
        android:label="fragment_menu"
        tools:layout="@layout/fragment_menu" />
</navigation>